--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ next-env.d.ts
 
 # Dependency directories
 node_modules/
+
+# vscode individual settings
+.vscode
+
+# gemini individual settings
+GEMINI.md
