--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next/third-parties": "^15.4.5",
     "@supabase/supabase-js": "^2.52.1",
+    "@vercel/analytics": "^1.5.0",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
